# micro.mcp

./: README.md  notes.md
src/micromcp/: concepts  crt.cpp  din.cpp
src/micromcp/clients/: clients_notes.md
src/micromcp/demo/: pyproject.toml
src/micromcp/demo/about_hawky/: .gitignore  server.py
src/micromcp/server/: servers.md
tests/: TESTS.md  script_test.cpp
